--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,10 @@ body,
 button {
   font-size: 20px;
 }
+
+.dropdown-container {
+  outline: 1px solid red;
+  margin: 40px;
+  padding: 40px;
+  width: 350px;
+}
