--- a/src/components/dropdown/Dropdown.css
+++ b/src/components/dropdown/Dropdown.css
@@ -1,5 +1,11 @@
+.container {
+  width: 100%;
+  min-width: 200px;
+  position: relative;
+}
+
 .dropdown {
-  min-width: 150px;
+  width: 100%;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   background-color: transparent;
@@ -8,7 +14,6 @@
   flex-direction: row;
   align-items: center;
   padding: 10px 5px;
-  position: relative;
 }
 
 .dropdown-text {
@@ -24,11 +29,12 @@
 }
 
 .options {
+  position: absolute;
+  width: 100%;
   background-color: #ffffff;
   border-radius: 5px;
-  position: absolute;
-  min-width: 150px;
   border: 1px solid rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
 
 .options > div {
